Fix the picture appearance on tablets in the 403 page

--- a/static/css/page-components/403.scss
+++ b/static/css/page-components/403.scss
@@ -7,6 +7,7 @@ h1.header-403 {
   padding-bottom: 3em;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   .picture {
     margin: 1em 0 2em;
@@ -15,7 +16,6 @@ h1.header-403 {
 
   .card {
     padding: 1.2em;
-    align-self: center;
     max-width: 16em;
 
     .title {
@@ -46,6 +46,10 @@ h1.header-403 {
 }
 
 @media only screen and (min-width: 480px) {
+  .container-403 .picture {
+    width: 24em;
+  }
+
   .container-403 .card {
     max-width: 16.5em;
     flex-shrink: 0;
